# ifc-geology-example

./: .gitignore  Readme.md  example1.py  example3_create-simple-ifc-model.py  example4_create-samples_refactored.py  example4_create_daub-proben.py  example5_create-sphere.py  pyproject.toml  rotation_form.dxf
docs/: 2022-08_DAUB-BIT - Modellanforderungen - Teil 3, Baugrundmodell, final, Anlage 1.xlsx  2022-08_DAUB-BIT-Modellanforderungen-T3, Appendix (EN).xlsx
ifc-geology-example/: example2_add-pset-to-geological-units.py  example3_create-spheres.py  example4_create_dxf_solids_and_ifc_together.py  example5_spheres_cylinders_and_cones.py  example6_dip_azi_depth.py
ifc-geology-example/ifc_utils/: ifc_utils.py
ifc-leapfrog-example/: example2.py  example4_create-samples_refactored.py  ifccsv.py
src/: example1_parse-leapfrog-boreholes-to-csv.py  example4_create_dxf_solids_and_ifc_together.py  example5_spheres_cylinders_and_cones.py  example6_dip_azi_depth.py  example7_sperical_arc_approximation.py
src/archive/: groundwater_geometries.py  inclined_drillings.py
src/borehole/: borehole.py
src/ifc_utils/: ifc_representations.py
